@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-28T01:38:00Z",
-  "count_outdated" : 379,
-  "uniques_outdated" : 70,
+  "timestamp" : "2022-06-28T08:22:17Z",
+  "count_outdated" : 381,
+  "uniques_outdated" : 71,
   "count" : 406,
   "uniques" : 78,
   "views" : [
-    {
-      "timestamp": "2022-06-14T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-15T00:00:00Z",
       "count": 1,
