@@ -1,12 +1,7 @@
 {
-  "count": 27,
-  "uniques": 8,
+  "count": 25,
+  "uniques": 7,
   "views": [
-    {
-      "timestamp": "2022-06-14T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-15T00:00:00Z",
       "count": 1,
